# pdf-grepper

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.cursor/commands/kiro/: validate-gap.md
.kiro/specs/missing-specs-repo-status/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/pdf-intelligence-system/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: pdf-grepper-requirements-conformance.md
docs/: requirements.md
ontology/: da.ttl  meaning.ttl
shacl/: da.shacl.ttl  meaning.shacl.ttl
src/pdf_grepper/: cli.py  da.py  meaning.py  pipeline.py  types.py  validate.py
src/pdf_grepper/cloud/: aws_textract.py  azure_read.py  google_vision.py  openai_ie.py
src/pdf_grepper/diagrams/: extract.py  interpret.py
src/pdf_grepper/dimensions/: discover.py
src/pdf_grepper/enrich/: web_search.py
src/pdf_grepper/ie/: entities.py  relations.py  stakeholders.py
src/pdf_grepper/maintenance/: __init__.py  spec_audit_model.py
src/pdf_grepper/ontology/: export_ttl.py  model.py
src/pdf_grepper/pdf/: layout.py  loader.py  ocr.py
tests/: conftest.py  test_import.py  test_integration_pipeline.py  test_pipeline.py  test_property_cache.py  test_property_cli_flags.py  test_property_cloud_adapters.py  test_property_determinism.py  test_property_diagrams.py  test_property_dimensions.py  test_property_domain_inference.py  test_property_entities.py  test_property_env_vars.py  test_property_export_json.py  test_property_export_ttl.py  test_property_layout.py  test_property_logging.py  test_property_ocr_modes.py  test_property_offline_and_tesseract.py  test_property_pdf_loading.py  test_property_provenance_and_invalid.py  test_property_relations.py  test_property_stakeholders.py  test_property_web_enrichment.py  test_shacl_da_meaning.py  test_spec_audit_model.py
tests/fixtures/: pg_small.ttl
